--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -276,6 +276,10 @@ p {
   margin-top: 16px;
 }
 
+.margin-tp-24 {
+  margin-top: 28px;
+}
+
 .margin-tp-32 {
   margin-top: 32px;
 }
@@ -400,8 +404,16 @@ p {
   gap: 4px;
 }
 
+.gap-6 {
+  gap: 6px;
+}
+
 .gap-8 {
   gap: 8px;
+}
+
+.gap-12 {
+  gap: 12px;
 }
 
 .gap-16 {
@@ -461,10 +473,10 @@ p {
 
 .line-inactive {
   max-width: 100vw;
+  width: 100%;
   height: 2px;
   background-color: #353535;
   margin: auto;
-  margin-top: 4px;
 }
 
 .width-100 {
@@ -730,7 +742,6 @@ p {
 
 .remove-btn {
   transition: all 0.2s ease-in-out;
-  position: absolute;
   background: transparent;
   border: none;
 
