[Add] gradient silhouette for design purpose

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -20,5 +20,6 @@ $gr-dark-blue: #0d31f1;
 
 $bg-main: #090909;
 $bg-main-90: #090909de;
+$bg-main-40: #0909096c;
 $bg-secondary: #232323;
 $bg-third: #181818;
