--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -17,6 +17,10 @@
   color: $text-disabled;
 }
 
+.text-active-blue-hover {
+  color: $el-active-blue-hover;
+}
+
 .text-error-red {
   color: $text-error-red;
 }
@@ -32,30 +36,39 @@
 .el-white-main {
   background-color: $el-white-main;
 }
+
 .el-active-blue {
   background-color: $el-active-blue;
 }
+
 .el-active-blue-hover {
   background-color: $el-active-blue-hover;
 }
+
 .el-error-red {
   background-color: $el-error-red;
 }
+
 .el-warning-orange {
   background-color: $el-warning-orange;
 }
+
 .el-inactive-blue {
   background-color: $el-inactive-blue;
 }
+
 .el-inactive-gray {
   background-color: $el-inactive-gray;
 }
+
 .el-border-gray {
   border-color: $el-border-gray;
 }
+
 .el-border-gray-focus {
   border-color: $el-border-gray-focus;
 }
+
 .el-bg-gray {
   background-color: $el-bg-gray;
 }
@@ -63,6 +76,7 @@
 .gr-light-blue {
   background: $gr-light-blue;
 }
+
 .gr-dark-blue {
   background: $gr-dark-blue;
 }
@@ -352,6 +366,18 @@ p {
   margin-bottom: 32px;
 }
 
+.p-2-y {
+  padding: 2px 0;
+}
+
+.p-4-y {
+  padding: 4px 0;
+}
+
+.p-16-x {
+  padding: 0 16px;
+}
+
 .padding-0 {
   padding: 0;
 }
@@ -424,6 +450,14 @@ p {
   align-items: center;
 }
 
+.align-start {
+  align-items: start;
+}
+
+.align-end {
+  align-items: end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -434,6 +468,10 @@ p {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.justify-end {
+  justify-content: end;
 }
 
 .gap-4 {
@@ -615,6 +653,10 @@ p {
 
 .b-r-10 {
   border-radius: 10px;
+}
+
+.radius-20 {
+  border-radius: 20px;
 }
 
 //Sizes
@@ -819,6 +861,9 @@ p {
   }
 }
 
+:hover {
+}
+
 // Visibility
 .hide {
   visibility: none;
@@ -843,6 +888,12 @@ p {
 .anw-silhouette {
   width: 100%;
   height: 300px;
+}
+
+// Cursors
+
+.pointer {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 700px) {
