--- a/Client/src/assets/styling/components/_newRequest.scss
+++ b/Client/src/assets/styling/components/_newRequest.scss
@@ -157,7 +157,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
+  background-color: $bg-main-90;
 }
 
 @media screen and (min-width: 700px) {
