--- a/Client/src/assets/styling/components/_userHomeTablet.scss
+++ b/Client/src/assets/styling/components/_userHomeTablet.scss
@@ -10,12 +10,12 @@
     margin: auto;
 
     .request-column {
-      width: calc(50% - 48px);
+      width: calc(40% - 48px);
       display: flex;
       flex-direction: column;
       gap: 48px;
       padding: 32px;
-      max-height: 476px;
+      max-height: 77vh;
       overflow-y: scroll;
 
       .request-container-tablet {
@@ -91,7 +91,7 @@
     }
 
     .data-column {
-      width: 50%;
+      width: 55%;
       margin-left: -16px;
 
       .data-container-tablet {
@@ -102,13 +102,13 @@
 
         .data-column-message-container {
           width: 100%;
-          max-height: 476px;
+          max-height: 60vh;
           overflow-y: scroll;
           margin-top: 10px;
           display: flex;
           flex-direction: column;
           gap: 6px;
-          padding-right: 10px;
+          padding-right: 16px;
 
           .text-editor-answer {
             width: 100%;
