[Updates] from Feature-repair-shop-signed-in-design

--- a/Client/src/assets/styling/components/_blueLine.scss
+++ b/Client/src/assets/styling/components/_blueLine.scss
@@ -1,6 +1,6 @@
 .blue-line {
-    max-width: 100vw;
-    height: 2px;
-    background: linear-gradient(to right, #0d3ef100, #0D31F1, #0d3ef100);
-    margin: auto;
+  max-width: 100vw;
+  height: 2px;
+  background: linear-gradient(to right, #0d3ef100, #0d31f1, #0d3ef100);
+  margin: auto;
 }
