--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -214,6 +214,10 @@ p {
   max-width: 1200px;
 }
 
+.m-width-50c-16 {
+  max-width: calc(50% - 16px);
+}
+
 .h-2 {
   height: 2px;
 }
@@ -863,9 +867,6 @@ p {
     background-color: $el-active-blue;
     cursor: pointer;
   }
-}
-
-:hover {
 }
 
 // Visibility
