--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -206,6 +206,10 @@ p {
   max-width: 330px;
 }
 
+.m-width-700 {
+  max-width: 700px;
+}
+
 .m-width-1000 {
   max-width: 700px;
 }
@@ -343,11 +347,15 @@ p {
 }
 
 .margin-tp-24 {
-  margin-top: 28px;
+  margin-top: 24px;
 }
 
 .margin-tp-32 {
   margin-top: 32px;
+}
+
+.margin-tp-64 {
+  margin-top: 102px;
 }
 
 .margin-top-n11 {
@@ -752,6 +760,22 @@ p {
       linear-gradient(to bottom, #f1550d, #f1550d5b);
     background-origin: border-box;
     background-clip: padding-box, border-box;
+  }
+}
+
+.input-error {
+  transition: all 0.2s ease-in-out;
+  outline: none;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+    linear-gradient(to bottom, rgb(241, 13, 13), rgb(241, 13, 13, 0.2));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+
+  &:focus {
+    background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus),
+      linear-gradient(to bottom, rgb(241, 13, 13), rgb(241, 13, 13, 0.2));
   }
 }
 
