[Add] logic to send email to backend

--- a/Client/src/assets/styling/components/_generalStyling.scss
+++ b/Client/src/assets/styling/components/_generalStyling.scss
@@ -402,6 +402,14 @@ p {
   padding: 4px 0;
 }
 
+.p-4-x {
+  padding: 0 4px;
+}
+
+.p-10-x {
+  padding: 0 10px;
+}
+
 .p-16-x {
   padding: 0 16px;
 }
