[Add] Firebase and Tailwind

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -2,12 +2,12 @@ $text-main: #d9d9d9;
 $text-secondary: #090909;
 $text-third: #a5a5a5;
 $text-disabled: #9e9e9e;
-$text-error-red: #f10d0d;
+$text-error-red: #ec1414;
 
 $el-white-main: #d9d9d9;
 $el-active-blue: #0d3ff1;
 $el-active-blue-hover: #120df1;
-$el-error-red: #f10d0d;
+$el-error-red: #ec1414;
 $el-warning-orange: #f1550d;
 $el-inactive-blue: #414142;
 $el-inactive-gray: #3e3e3e;
