--- a/Client/src/assets/styling/components/_consumerNav.scss
+++ b/Client/src/assets/styling/components/_consumerNav.scss
@@ -3,6 +3,25 @@
 
 @import './consumerNavMobileMenu';
 
+.animation {
+  transition: all 0.2s ease-in-out;
+  span:nth-child(2) {
+    transform: rotate(-45deg);
+  }
+
+  button {
+    gap: 0px;
+  }
+
+  span:nth-child(1) {
+    transform: rotate(45deg);
+  }
+  span:nth-child(3) {
+    transform: rotate(45deg);
+    margin-left: 9px;
+  }
+}
+
 nav {
   position: fixed;
   z-index: 2;
@@ -28,10 +47,11 @@ nav {
           border: none;
           display: flex;
           flex-direction: column;
-          gap: 5px;
+          gap: 4px;
+          padding-bottom: 0;
+          padding: 10px;
+          padding-right: 7px;
           background: transparent;
-          padding: 0;
-          padding: 5px;
           margin-right: -5px;
 
           &:hover {
@@ -40,10 +60,58 @@ nav {
         }
 
         span {
+          transition: all 0.2s ease-in-out;
           width: 25px;
           height: 4px;
           border-radius: 5px;
           background-color: $el-white-main;
+          border: none;
+
+          &:nth-child(1) {
+            width: 45%;
+          }
+
+          &:nth-child(3) {
+            width: 75%;
+            margin-left: 25%;
+          }
+        }
+
+        .span-nr1 {
+          transition: all 0.2s ease-in-out;
+          transform-origin: bottom;
+          transform: rotatez(45deg) translate(2px, 1px);
+        }
+
+        .span-nr2 {
+          transition: all 0.2s ease-in-out;
+          transform: rotate(-45deg);
+        }
+
+        .span-nr3 {
+          transition: all 0.2s ease-in-out;
+          transform-origin: bottom;
+          transform: rotatez(45deg) translate(-5px, -3.4px);
+        }
+
+        .animation {
+          transition: all 0.2s ease-in-out;
+          background-color: $el-active-blue-hover;
+          span:nth-child(2) {
+            transform: rotate(-45deg);
+          }
+
+          button {
+            gap: 0px;
+          }
+
+          span:nth-child(1) {
+            transform: rotate(45deg);
+          }
+          span:nth-child(3) {
+            transform: rotate(45deg);
+            margin-left: 9px;
+          }
         }
       }
     }
